...
                        scope.launch {
                            snackbarHostState.showSnackbar("Enter valid amount")
                        }
                        return@Button
                    }
                    onTransaction(value, isCredit)
                }) { Text("Add") }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) { Text("Cancel") }
        })
}

...

    AlertDialog(onDismissRequest = onDismiss, title = { Text("Add Friend") }, text = {
        Column {
            OutlinedTextField(
                value = name,
                onValueChange = { name = it },
                label = { Text("Name") },
                colors = OutlinedTextFieldDefaults.colors(
                    focusedTextColor = WhiteText,
                    unfocusedTextColor = WhiteText,
                    focusedBorderColor = WhiteText,
                    unfocusedBorderColor = Color.Gray,
                    focusedLabelColor = WhiteText,
...
